fix apparent misalignment of paws on pets/mounts grids

--- a/public/css/inventory.styl
+++ b/public/css/inventory.styl
@@ -123,6 +123,9 @@ menu.pets .customize-menu
     -o-filter: brightness(0%)
     -ms-filter: brightness(0%)*/
 
+    .PixelPaw
+      margin-top: 36px // align paw with pets, at the bottom of the button
+
 .selectableInventory
   background-color: lightgreen !important
   border-radius: 50%
